--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "g": "^2.0.1",
     "lucide-react": "^0.447.0",
-    "next": "14.2.14",
+    "next": "^14.2.23",
+    "npm": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
