--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "g": "^2.0.1",
     "lucide-react": "^0.447.0",
     "next": "^14.2.23",
+    "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
     "npm": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
